--- a/src/app/components/calendar/calendar-modal/calendar-modal.component.html
+++ b/src/app/components/calendar/calendar-modal/calendar-modal.component.html
@@ -1,84 +1,136 @@
 <div class="modal-header">
-  <h5 class="modal-title">Asignar maquinaria para el {{ selectedDate }}</h5>
+  <h5 class="modal-title">Asignar para el {{ selectedDate }}</h5>
   <button type="button" class="close" (click)="modalRef.hide()">
     <span>&times;</span>
   </button>
 </div>
 
 <div class="modal-body">
-  <!-- Nombre del Evento separado del resto -->
-  <div class="form-group">
-    <label for="eventName">Nombre del Evento</label>
-    <input
-      type="text"
-      id="eventName"
-      [(ngModel)]="nombreEvento"
-      class="form-control"
-      placeholder="Ingrese el nombre del evento"
-    />
+  <div class="d-flex justify-content-around mb-4">
+    <button class="btn btn-outline-primary" (click)="isEventSelected = true">
+      Asignar Evento
+    </button>
+    <button class="btn btn-outline-secondary" (click)="isEventSelected = false">
+      Asignar Proyecto
+    </button>
   </div>
 
-  <div class="row mt-3">
-    <!-- Primera columna -->
-    <div class="col-6">
-      <div class="form-group">
-        <label for="empleado">Empleado</label>
-        <select
-          id="empleado"
-          [(ngModel)]="selectedEmployee"
-          class="form-control"
-        >
-          <option value="">Selecciona un empleado</option>
-          <option *ngFor="let emp of employees" [value]="emp.id">
-            {{ emp.name }}
-          </option>
-        </select>
+  <!-- Formulario de Evento -->
+  <div *ngIf="isEventSelected">
+    <div class="form-group">
+      <label>Nombre del Evento</label>
+      <input
+        [(ngModel)]="nombreEvento"
+        class="form-control"
+        placeholder="Ingrese el nombre del evento"
+      />
+    </div>
+
+    <div class="row mt-3">
+      <div class="col-6">
+        <div class="form-group">
+          <label>Empleado</label>
+          <select [(ngModel)]="selectedEmployee" class="form-control">
+            <option value="">Selecciona un empleado</option>
+            <option *ngFor="let emp of employees" [value]="emp.id">
+              {{ emp.name }}
+            </option>
+          </select>
+        </div>
+
+        <div class="form-group">
+          <label>Maquinaria</label>
+          <select [(ngModel)]="selectedMachine" class="form-control">
+            <option value="">Selecciona una maquinaria</option>
+            <option *ngFor="let maq of machines" [value]="maq.id">
+              {{ maq.name }}
+            </option>
+          </select>
+        </div>
       </div>
 
-      <div class="form-group">
-        <label for="maquina">Maquinaria</label>
-        <select id="maquina" [(ngModel)]="selectedMachine" class="form-control">
-          <option value="">Selecciona una maquinaria</option>
-          <option *ngFor="let maq of machines" [value]="maq.id">
-            {{ maq.name }}
-          </option>
-        </select>
+      <div class="col-6">
+        <div class="form-group">
+          <label>Hora Inicio</label>
+          <input type="time" [(ngModel)]="horaInicio" class="form-control" />
+        </div>
+
+        <div class="form-group">
+          <label>Hora Fin</label>
+          <input type="time" [(ngModel)]="horaFin" class="form-control" />
+        </div>
       </div>
     </div>
 
-    <!-- Segunda columna -->
-    <div class="col-6">
-      <div class="form-group">
-        <label for="horaInicio">Hora Inicio</label>
-        <input
-          type="time"
-          id="horaInicio"
-          [(ngModel)]="horaInicio"
-          class="form-control"
-        />
-      </div>
-
-      <div class="form-group">
-        <label for="horaFin">Hora Fin</label>
-        <input
-          type="time"
-          id="horaFin"
-          [(ngModel)]="horaFin"
-          class="form-control"
-        />
-      </div>
+    <div class="form-group mt-3">
+      <label>Descripción del Evento</label>
+      <textarea
+        [(ngModel)]="descripcion"
+        class="form-control"
+        rows="3"
+        placeholder="Descripción del evento"
+      ></textarea>
     </div>
   </div>
 
-  <!-- Descripción debajo de las columnas -->
-  <div class="form-group mt-3">
-    <label for="descripcion">Descripción</label>
-    <textarea
-      [(ngModel)]="descripcion"
-      class="form-control"
-      placeholder="Descripción de la tarea"
-      rows="3"
-    ></textarea>
+  <!-- Formulario de Proyecto -->
+  <div *ngIf="!isEventSelected">
+    <div class="form-group">
+      <label>Nombre del Proyecto</label>
+      <input
+        [(ngModel)]="nombreProyecto"
+        class="form-control"
+        placeholder="Ingresa o edita el nombre del proyecto"
+      />
+    </div>
+
+    <div class="form-group">
+      <label>Selecciona un Proyecto</label>
+      <select
+        [(ngModel)]="selectedProject"
+        class="form-control"
+        (change)="onProjectSelect()"
+      >
+        <option value="">Selecciona un proyecto</option>
+        <option *ngFor="let project of projects" [value]="project.id">
+          {{ project.name }}
+        </option>
+      </select>
+    </div>
+
+    <div class="row mt-3">
+      <div class="col-6">
+        <div class="form-group">
+          <label>Hora Inicio</label>
+          <input
+            type="time"
+            [(ngModel)]="horaInicioProyecto"
+            class="form-control"
+          />
+        </div>
+      </div>
+
+      <div class="col-6">
+        <div class="form-group">
+          <label>Hora Fin</label>
+          <input
+            type="time"
+            [(ngModel)]="horaFinProyecto"
+            class="form-control"
+          />
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group mt-3">
+      <label>Descripción del Proyecto</label>
+      <textarea
+        [(ngModel)]="descripcionProyecto"
+        class="form-control"
+        rows="3"
+        placeholder="Descripción del proyecto"
+      ></textarea>
+    </div>
   </div>
 </div>
 
